syntax = "proto3";

package rpc;

// The service definition.
service CNIBackend {
  rpc AddNetwork (AddNetworkRequest) returns (AddNetworkReply) {}
  rpc DelNetwork (DelNetworkRequest) returns (DelNetworkReply) {}
}

message AddNetworkRequest {
  string K8S_POD_NAME = 1;
  string K8S_POD_NAMESPACE = 2;
  string K8S_POD_INFRA_CONTAINER_ID = 3;
  string ContainerID = 7;
  string IfName = 5;
  string NetworkName = 6;
  string Netns = 4;
  // next field: 8
}

message AddNetworkReply {
  bool Success = 1;
  string Ipv4Addr = 2;
  string Ipv6Addr = 7;
  int32 DeviceNumber = 4;
  bool UseExternalSNAT = 5;
  repeated string VpcCidrs4 = 6;
  repeated string VpcCidrs6 = 8;
  // next field: 9
}

message DelNetworkRequest {
  string K8S_POD_NAME = 1;
  string K8S_POD_NAMESPACE = 2;
  string K8S_POD_INFRA_CONTAINER_ID = 3;
  string Reason = 5;
  string ContainerID = 8;
  string IfName = 6;
  string NetworkName = 7;
  // next field: 9
}

message DelNetworkReply {
  bool Success = 1;
  string Ipv4Addr = 2;
  string Ipv6Addr = 4;
  int32 DeviceNumber = 3;
  // next field: 5
}
